View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022720 | Open CASCADE | OCCT:Modeling Algorithms | public | 2011-09-06 12:00 | 2012-04-03 16:11 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.2 | ||||
Target Version | 6.5.2 | Fixed in Version | 6.5.2 | ||
Summary | 0022720: Wrong intersection point for the case of intersection between sphere and plane | ||||
Description | The algorithm of intersection between sphere and plane produces an intersection point that does not belong to the plane | ||||
Steps To Reproduce | Use the following Draw commands to reproduce the bug. restore f1 b1 restore f2 b2 mksurface s1 b1 mksurface s2 b2 trim s1t s1 0 2 0 2 intersect i s1t s2 | ||||
Additional information and documentation updates | 1. Initial shapes (see the file shapes.zip attached) 2. To obtain the results of "Steps To Reproduce" it is necesary to take int account the modifications in the file(s): GeometryTest_CurveCommands.cxx that will be done later. ----------------------- Version 1 1. New features: no New features 2. Changes: 2.1. class IntPatch_ImpImpIntersection 2.1.1. method: void IntPatch_ImpImpIntersection::Perform( const Handle(Adaptor3d_HSurface)& S1, const Handle(Adaptor3d_TopolTool)& D1, const Handle(Adaptor3d_HSurface)& S2, const Handle(Adaptor3d_TopolTool)& D2, const Standard_Real TolArc, const Standard_Real TolTang) The check-up of intersection points has been added. The contents of the check-up is to analyse whether the intersection point ia within the 2D-domain of the surface or not. Only intersection points that are not out of the 2D-domains of both surfaces are added to the resulting sequence. 2.2. static functions 2.2.1 static Standard_Integer intersection ( Draw_Interpretor& di, Standard_Integer n, const char** a) The graphical display of the intersection points for the case of intersection of two surfaces has been added. III. Modified entities: -packages: IntPatch GeometryTest -classes: IntPatch_ImpImpIntersection -functions intersection -methods: void IntPatch_ImpImpIntersection::Perform( const Handle(Adaptor3d_HSurface)& S1, const Handle(Adaptor3d_TopolTool)& D1, const Handle(Adaptor3d_HSurface)& S2, const Handle(Adaptor3d_TopolTool)& D2, const Standard_Real TolArc, const Standard_Real TolTang) | ||||
Tags | No tags attached. | ||||
Test case number | chl 934 B3 | ||||
2011-09-06 12:00 developer |
shapes.zip (1,172 bytes) |
|
SVN branch http://svn/svn/occt/branches/0022720 is ready to be reviewed |
|
Small correction done in file IntPatch_ImpImpIntersection_2.gxx: line 490: "D2" instead of "D1" |
|
Dear BugMaster, Workbench KAS:dev:mkv-OCC22720-occt has been created from SVN branch http://svn/svn/occt/branches/0022720 (and mkv-OCC22720-products from trank) and compiled on Linux platform. There are not regressions in mkv-OCC22720-products regarding to KAS:dev:products-20110902-opt See results in /dn45/occttests/results/KAS/dev/mkv-OCC22720-products_06092011/lin See reference results in /dn45/occttests/results/KAS/dev/products-20110902-opt_05092011/lin See test cases in /dn45/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
|
Integration into occt repository Date: 2011-09-07 19:40:56 +0400 (Wed, 07 Sep 2011) New Revision: 8983 Modified: trunk/src/GeometryTest/GeometryTest_CurveCommands.cxx trunk/src/IntPatch/IntPatch_ImpImpIntersection_2.gxx |
|
B3 (446 bytes) |
occt: master c5c34473 2011-09-07 15:40:56
Committer: bugmaster Details Diff |
0022720: Wrong intersection point for the case of intersection between sphere and plane |
Affected Issues 0022720 |
|
mod - src/GeometryTest/GeometryTest_CurveCommands.cxx | Diff File | ||
mod - src/IntPatch/IntPatch_ImpImpIntersection_2.gxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2011-09-06 12:00 |
|
New Issue | |
2011-09-06 12:00 |
|
Assigned To | => pkv |
2011-09-06 12:00 |
|
File Added: shapes.zip | |
2011-09-06 13:19 |
|
Status | new => assigned |
2011-09-06 13:46 |
|
Note Added: 0018077 | |
2011-09-06 13:46 |
|
Assigned To | pkv => jgv |
2011-09-06 13:46 |
|
Status | assigned => resolved |
2011-09-06 13:46 |
|
Resolution | open => fixed |
2011-09-06 13:46 |
|
Additional Information Updated | |
2011-09-06 15:40 |
|
Note Added: 0018078 | |
2011-09-06 15:40 |
|
Status | resolved => reviewed |
2011-09-07 18:24 |
|
Note Added: 0018087 | |
2011-09-07 18:25 |
|
Status | reviewed => tested |
2011-09-07 19:41 | bugmaster | Note Added: 0018091 | |
2011-09-07 19:41 | bugmaster | Status | tested => verified |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master c5c34473 |
2012-04-03 16:10 | apn | File Added: B3 | |
2012-04-03 16:11 | apn | Test case number | => chl 934 B3 |