0022720: Wrong intersection point for the case of intersection between sphere and plane